resources/css/style.css
body {
  margin: 0px;
  padding: 0px;
  font-family: Helvetica;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity: 0.9;
  text-align: center;
  display: flex;
  flex-direction: column;
}

header {
  height: 69px;
  width: 100%;
  background-color: black;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid seashell;
  position: fixed;
}

header img {
  height: 50px;
  margin-left: 10px;
}

header span {
  padding: 10px;
}

a {
  color: seashell;
}

.mission-img {
  background-image: url("../images/img-mission-background.jpg");
  width: 1200px;
  height: 700px;
  display: flex;
  align-items: center;
  align-self: center;
}

.mission {
  background-color: black;
  width: 1200px;
  height: 120px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.tea-month {
  width: 1000px;
  align-self: center;
  border: 2px solid red;
}

.tea-grid {
  display: flex;
  flex-wrap: wrap;
  border: 2px solid green;
  justify-content: center space-between;

}

.tea-grid div {
  height: 300px;
  width: 300px;
  justify-content: space-around;
}

.tea-grid h4 {
  margin-top: 10px;
}

.tea-month img {
  height: 200px;
  width: 300px;
}

.location {
  background-image: url("../images/img-locations-background.jpg");
  width: 1200px;
  height: 500px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-self: center;
}

.location h2 {
  margin-bottom: 15px;
}

.address {
  display: flex;
}

.address div {
  width: 300px;
  height: 300px;
  background-color: black;
  margin: 40px;
}

.info {
  height: 200px;
}

.copyright {
  text-align: left;
  margin-left: 20px;
}

